[gd_scene load_steps=3 format=3 uid="uid://b4u3oo8xx6klf"]

[ext_resource type="Script" path="res://ui/map_menu.gd" id="1_yc56u"]

[sub_resource type="LabelSettings" id="LabelSettings_c5p8y"]
font_size = 50

[node name="MapMenu" type="CanvasLayer"]
script = ExtResource("1_yc56u")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 455.0
offset_bottom = 475.0
theme_override_constants/separation = 27

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Shooter / Maps"
label_settings = SubResource("LabelSettings_c5p8y")

[node name="GardenDayButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Garden day
"

[node name="GardenNightButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Garden night"

[node name="WarmUpRoom1Button" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Warm up room 1
"

[node name="BackButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Back"

[connection signal="button_down" from="Control/VBoxContainer/GardenDayButton" to="." method="_on_garden_day_button_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/GardenNightButton" to="." method="_on_garden_night_button_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/WarmUpRoom1Button" to="." method="_on_warm_up_room_1_button_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/BackButton" to="." method="_on_back_button_button_down"]
